fix: enlarge progressbar z-index

--- a/src/css/nprogress.less
+++ b/src/css/nprogress.less
@@ -7,7 +7,7 @@
     background: @primary;
   
     position: fixed;
-    z-index: 1031;
+    z-index: 2500;
     top: 0;
     left: 0;
   
